[gd_scene load_steps=2 format=3 uid="uid://cwdan2e1g2k6r"]

[ext_resource type="Script" uid="uid://lw6qsq65h4p4" path="res://Scripts/Menu.gd" id="1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Locked in #1#"
horizontal_alignment = 1

[node name="NewRunButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 36)
layout_mode = 2
text = "New Run"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 36)
layout_mode = 2
text = "Continue"

[node name="SoundToggle" type="CheckButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
text = "Sound: On"

[node name="MusicToggle" type="CheckButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
text = "Music: On"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 36)
layout_mode = 2
text = "Quit"
